Revert "style: increase padding-bottom to prevent overlap"
This reverts commit 859928797ba1bdab6fb381078ee0155e998b316d.

--- a/packages/website/src/theme/CodeBlock/Content/styles.module.css
+++ b/packages/website/src/theme/CodeBlock/Content/styles.module.css
@@ -43,8 +43,7 @@
   /* rtl:ignore */
   float: left;
   min-width: 100%;
-  padding: var(--ifm-pre-padding) var(--ifm-pre-padding)
-    calc(var(--ifm-pre-padding) * 2.5);
+  padding: var(--ifm-pre-padding);
 }
 
 .codeBlockLinesWithNumbering {
@@ -103,9 +102,5 @@
   .playgroundButton {
     position: static;
     margin: calc(var(--ifm-pre-padding) / 2);
-  }
-
-  .codeBlockLines {
-    padding: var(--ifm-pre-padding);
   }
 }
